deploy: 993244a5698478f2d3b760417b32df9ff9d0c86a

--- a/notebooks/_sources/pangeo-riomar_resize_datarmor.ipynb
+++ b/notebooks/_sources/pangeo-riomar_resize_datarmor.ipynb
@@ -5,7 +5,7 @@
    "id": "c8583784-3144-436c-a623-d48c848e3f88",
    "metadata": {},
    "source": [
-    "# Create a small sample RiOMar dataset on Datamor\n",
+    "# Create a small sample RiOMar dataset\n",
     "\n",
     "## Context\n",
     "\n",
@@ -18,7 +18,7 @@
     "In this notebook, we will:\n",
     "- Open a RiOMar data file\n",
     "- Select a few times to reduce the amount of data\n",
-    "- Save the transformed data in Zarr and make it accessible on datamor\n",
+    "- Save the transformed data in Zarr\n",
     "\n",
     "## Contributions\n",
     "\n",
@@ -50,14 +50,17 @@
     "\n",
     "```\n",
     "\n",
-    "Then connect to  `https://datarmor-jupyterhub.ifremer.fr/`\n",
-    "\n",
-    "## How to read netCDF file from remote location from https\n",
-    "\n",
-    "```Python\n",
-    "fs = fsspec.filesystem('https')\n",
-    "ds = xr.open_dataset(fs.open(url))\n",
-    "```"
+    "Then connect to  `https://datarmor-jupyterhub.ifremer.fr/`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a8d5ef-ddd4-437b-984b-17146002e3dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import Libraries"
    ]
   },
   {
@@ -70,6 +73,15 @@
     "import xarray as xr\n",
     "import fsspec\n",
     "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b2ee5fb-8c7d-4c4c-a313-ffa33565f6ab",
+   "metadata": {},
+   "source": [
+    "## Open Croco grid file \n",
+    "- The grid file is either local if you are running on datamor or accessible via `https` is running elsewhere."
    ]
   },
   {
@@ -512,6 +524,15 @@
     "\n",
     "#grid.to_netcdf('/home/lops-oh-fair2adapt/riomar/misc/croco_grd_hdf5.nc',format='NETCDF4')\n",
     "grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04abd1ad-96a3-4351-ab47-e5c97c12bfd9",
+   "metadata": {},
+   "source": [
+    "## Open one RiOMar model file\n",
+    "- again the file is either available from datamor if you are running on datamor or accessible via `https` elsewhere."
    ]
   },
   {
