deploy: a4c7e68dfec127d02ed6bd58c8e4971e32dd98bc

--- a/notebooks/_sources/NorESM-regridding.ipynb
+++ b/notebooks/_sources/NorESM-regridding.ipynb
@@ -13,6 +13,11 @@
     "\n",
     "The goal is to experiment how to transform NorESM data into DGGS (healpix grid).\n",
     "\n",
+    "```{warning}\n",
+    "**This notebook does not work yet**. We encountered issues when transforming NorESM data into the DGGS format.\n",
+    "In addition, this FAIR2Adapt case study will likely require different types of interpolation, as bilinear interpolation is not suitable for all variables. For instance, conservative interpolation is currently being developed.\n",
+    "```\n",
+    "\n",
     "### Description\n",
     "\n",
     "In this notebook, we will:\n",
